--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- CENTRO -->
                 <div id="center" class="col py-4 px-5 bg-dark text-light">
                     <div class="row row-cols-1">
-                        <div class="col d-flex justify-content-between mb-3   ">
+                        <div class="col d-flex justify-content-between mb-3">
                             <div class="d-flex  ">
                                 <div class="d-none d-lg-flex">
                                     <div
@@ -148,7 +148,7 @@
                             </div>
                         </div>
 
-                        <div id="annunci" class="col mb-3 rounded-2 d-none d-lg-block">
+                        <div id="annunci" class="col mb-5 rounded-2 d-none d-lg-block">
 
                         </div>
 
@@ -164,7 +164,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <div id="artistContainer" class="row row-cols-12 row-cols-md-3">
+                                    <div id="artistContainer" class="row row-cols-2 row-cols-sm-3 row-cols-md-6">
 
                                     </div>
                                 </div>
@@ -238,17 +238,17 @@
         </div>
 
         <!-- PLAYER -->
-        <section id="sectionControl" class="position-fixed bottom-0 player-bar w-100 d-none">
-            <div class="container-fluid bg-dark border border-0 border-top border-1 border-secondary p-0">
-                <div class="row text-center p-2 align-items-center">
-                    <div id="sectionAlbum" class="col-2 d-flex text-secondary align-items-center">
+        <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
+            <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
+                <div class="row text-center p-2 align-items-center justify-content-between">
+                    <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
 
                     </div>
-                    <div id="sectionPlayer" class="col-8 text-center">
+                    <div id="sectionPlayer" class="col-6 col-md-8 text-center">
 
                     </div>
 
-                    <div id="sectionVolume" class="col-2 volumeControll">
+                    <div id="sectionVolume" class="col-md-2 volumeControll">
 
                     </div>
 
@@ -258,7 +258,7 @@
     </main>
 
     <!-- Navbar mobile -->
-    <nav class="navbar-mobile d-sm-block d-md-none  ">
+    <nav class="navbar-mobile d-sm-block d-md-none">
         <ul class="nav justify-content-around w-100">
             <li class="nav-item">
                 <a class="nav-link text-light" href="#"><i class="fa-solid fa-home"></i></a>
