--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <div class="col">
                             <div class="row row-cols-1 mb-3">
                                 <div class="col p-0 d-flex justify-content-between align-items-start">
-                                    <h2 class="fs-2 fw-bold goodnight-mobile mb-3">Buonasera</h2>
+                                    <h2 class="fs-2 fw-bold goodnight-mobile mb-3">Artisti</h2>
                                     <div class="icon-container d-flex  d-sm-block d-md-none ">
                                         <i class="fa-solid fa-bell">&nbsp;</i>
                                         <i class="fa fa-gear">&nbsp;</i>
