--- a/artist.html
+++ b/artist.html
@@ -20,14 +20,15 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-2 bg-black vh-100">
+                <div class="col-2 bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-light text-decoration-none align-self-center" href="index.html">Home</a>
+                                    <a class="text-light text-decoration-none align-self-center"
+                                        href="index.html">Home</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-search text-secondary me-3 fs-4"></i>
@@ -122,129 +123,20 @@
 
                 <!-- CENTRO -->
 
-                <div id="center" class="col px-0 text-light vh-100">
-                    <div>
+                <div id="center" class="col p-0 text-light bg-dark">
 
-                        <div class="row row-cols-1 py-3 mx-0 bg-img-dinamica">
-
-                            <div class="col d-flex justify-content-between mb-3">
-                                <div class="d-flex">
-                                    <div
-                                        class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center me-4">
-                                        <i class="fa-solid fa-chevron-left fs-5"></i>
-                                    </div>
-
-                                    <div
-                                        class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center">
-                                        <i class="fa-solid fa-chevron-right fs-5"></i>
-                                    </div>
-                                </div>
-                                <div
-                                    class="d-flex text-light bg-black rounded-5 justify-content-end align-items-center">
-                                    <div class="square me-3">
-                                        <img src="assets/img/search/image-1.jpeg" class="w-100 rounded-circle" alt="">
-                                    </div>
-                                    <p class="m-0 me-3">Team 1...</p>
-                                    <i id="dropdown" class="fa-solid fa-caret-down fs-5 align-self-self pe-3"></i>
-                                </div>
-                            </div>
-
-                            <div class="col mb-3">
-                                <div class="row text-light rounded-2 m-2">
-
-                                    <div class="col-9 d-flex flex-column justify-content-end">
-                                        <div>
-                                            <p class="pt-3 fs-small mb-0 d-flex align-items-center">
-                                                <span class=" icon-container me-2">
-                                                    <i class="bi bi-patch-check-fill fs-3 icon-background"></i>
-                                                    <i class="bi bi-patch-check fs-3 icon-foreground"></i>
-                                                </span>Artist Verificato
-                                            </p>
-                                        </div>
-                                        <div>
-                                            <h1 class="fs-10 fw-bold mb-0 display-1">Gioventù brucata</h1>
-                                        </div>
-                                        <div class="d-flex align-items-center">
-                                            <p><span class="nr-ascoltatori"></span>ascoltatori mensili</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div id="colHeroImg" class="row row-cols-2 mx-0 align-items-center bgCenterDark p-4">
 
 
-                        <!--parte centrale- canzoni -->
-
-                        <div class="container-fluid bg-dark pt-4 px-4 m-0">
-                            <div class="row">
-                                <div class="col d-flex align-items-center">
-                                    <div class="me-4 btn-round">
-                                        <button type="submit" class="btn bgSpoty w-100 h-100 rounded-circle me-2">
-                                            <i class="bi bi-play-fill fs-2 text-center mt-1"></i></button>
-                                    </div>
-                                    <div class="me-4">
-                                        <button type="button" class="btn btn-outline-light"> FOLLOWING</button>
-                                    </div>
-                                    <div>
-                                        <p class="fs-3">...</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="container">
-                                <div class="row my-4">
-                                    <div class="col">
-                                        <h4>Popolari</h4>
-                                    </div>
-                                    <div class="col-5">
-                                        <h4>Brani che ti piacciono</h4>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-7 d-flex">
-                                            <div class="col-5 album-parte-dinamica d-flex text-start">
-                                            <div class="col m-0 p-0">
-                                                <p>1</p>
-                                            </div>
-                                            <div class="col  m-0 p-0">
-                                                <div class="img-parte-dinamica w-50">
-                                                    <img src="assets/img/search/image-18.jpg" class="w-100"
-                                                        alt="img-brano">
-                                                </div>
-                                            </div>
-                                            <div class="col nome-brano  m-0 p-0">
-                                                <p>Ocen Avenue</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-4">
-                                            <p>276.616.912</p>
-                                        </div>
-                                        <div class="col-3 time-brano">
-                                            <p>3:18</p>
-                                        </div>
-                                        </div> 
-                                        <div class="col-5 d-flex align-items-center">
-                                            <div class="w-15 mb-3"> 
-                                                <img src="assets/img/search/image-18.jpg" class="w-100  rounded-circle"
-                                                alt="img-brano">
-                                            </div>
-                                            <div class="ms-2">
-                                                <p class="mb-1">Hai messo Mi piace a 11 brani</p>
-                                                <p class=fs-small>Di Yellowcard</p>
-                                            </div>
-                                        </div>
-                                </div>
-
-                            </div>
-
-                            <!--parte centrale dinamica-->
-
-
-
-                        </div>
                     </div>
+
+                    <div id="containerArtist" class="col p-3">
+
+                    </div>
+                    <!--parte centrale- canzoni -->
+
+
                 </div>
-
-
                 <!-- Album Section -->
 
                 <!-- DESTRA -->
@@ -302,19 +194,18 @@
                     </div>
                 </div>
 
-            </div>
 
-            <!-- PLAYER -->
-            <section>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
+                <!-- PLAYER -->
+                <section>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col"></div>
+                            <div class="col"></div>
+                            <div class="col"></div>
+                        </div>
                     </div>
-                </div>
-            </section>
-        </div>
+                </section>
+            </div>
     </main>
 
 
