--- a/artist.html
+++ b/artist.html
@@ -125,14 +125,19 @@
 
                 <div id="center" class="col p-0 text-light bg-dark">
 
-                    <div id="colHeroImg" class="row row-cols-2 mx-0 align-items-center bgCenterDark p-4">
+                    <div class="row row-cols-2 mx-0">
+                        <div id="colHeroImg" class="col-12 d-flex justify-content-between mb-3">
 
+                        </div>
 
+                        <div class="col-12 px-4 mb-10">
+                            <div id="containerArtist" class="row m-0 p-0">
+
+                            </div>
+                        </div>
                     </div>
 
-                    <div id="containerArtist" class="col p-3">
 
-                    </div>
                     <!--parte centrale- canzoni -->
 
 
@@ -193,21 +198,26 @@
                         </div>
                     </div>
                 </div>
-
-
-                <!-- PLAYER -->
-                <section>
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col"></div>
-                            <div class="col"></div>
-                            <div class="col"></div>
-                        </div>
-                    </div>
-                </section>
             </div>
     </main>
 
+    <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
+        <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
+            <div class="row text-center p-2 align-items-center justify-content-between">
+                <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
+
+                </div>
+                <div id="sectionPlayer" class="col-6 col-md-8 text-center">
+
+                </div>
+
+                <div id="sectionVolume" class="col-md-2 volumeControll">
+
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
