--- a/artist.html
+++ b/artist.html
@@ -130,8 +130,15 @@
 
                         </div>
 
-                        <div class="col-12 px-4 mb-10">
+                        <div class="col-12 px-4 mb-5">
                             <div id="containerArtist" class="row m-0 p-0">
+
+                            </div>
+                        </div>
+
+                        <div class="col-12 px-4  mb-10">
+                            <p class="fs-3">Album</p>
+                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
 
                             </div>
                         </div>
@@ -214,6 +221,7 @@
                 <div id="sectionVolume" class="col-md-2 volumeControll">
 
                 </div>
+                
 
             </div>
         </div>
