--- a/artist.html
+++ b/artist.html
@@ -131,14 +131,14 @@
                         </div>
 
                         <div class="col-12 px-4 mb-5">
-                            <div id="containerArtist" class="row m-0 p-0">
+                            <div id="containerArtist" class="row m-0 p-0 border border-0 border-bottom border-1 border-secondary">
 
                             </div>
                         </div>
 
                         <div class="col-12 px-4  mb-10">
-                            <p class="fs-3">Album</p>
-                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
+                            <p class="fs-2 fw-bold">Album</p>
+                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3  ">
 
                             </div>
                         </div>
