--- a/artist.html
+++ b/artist.html
@@ -206,6 +206,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
