--- a/album.html
+++ b/album.html
@@ -13,9 +13,9 @@
     <title>Spotify</title>
 </head>
 
-<body>
+<body >
 
-    <main>
+    <main >
         <div class="container-fluid g-0">
             <div class="row">
 
@@ -124,7 +124,7 @@
 
                 <!-- CENTRO -->
 
-                <div id="center" class="col px-0 text-light mb-0">
+                <div id="center" class="col px-0 text-light vh-100 overflow-scroll mb-0">
                    <!-- <div class="sfondoDinamico">
                         <div class="row row-cols-1 p-3">
                             <div class="col d-flex justify-content-between mb-3">
