--- a/artist.html
+++ b/artist.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <main>
+    <main class="overflow-x-hidden">
         <div class="container-fluid g-0">
             <div class="row">
 
@@ -130,15 +130,8 @@
 
                         </div>
 
-                        <div class="col-12 px-4 mb-5">
-                            <div id="containerArtist" class="row m-0 p-0 border border-0 border-bottom border-1 border-secondary">
-
-                            </div>
-                        </div>
-
-                        <div class="col-12 px-4  mb-10">
-                            <p class="fs-2 fw-bold">Album</p>
-                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3  ">
+                        <div class="col-12 px-4 mb-10">
+                            <div id="containerArtist" class="row m-0 p-0">
 
                             </div>
                         </div>
@@ -206,7 +199,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
@@ -222,7 +214,6 @@
                 <div id="sectionVolume" class="col-md-2 volumeControll">
 
                 </div>
-                
 
             </div>
         </div>
