--- a/album.html
+++ b/album.html
@@ -108,19 +108,24 @@
                         </div>
 
                         <div class="col">
-                            <ul class="text-secondary list-unstyled">
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2">early stage emily syndrome (settt-ott 2022)</li>
+                            <ul id="search-history-list" class="text-secondary list-unstyled">
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
                             </ul>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- CENTRO -->
 
