--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Spotify</title>
 </head>
 
-<body class="bg-dark">
+<body>
 
     <main>
         <div class="container-fluid">
@@ -122,7 +122,7 @@
                 </div>
 
                 <!-- CENTRO -->
-                <div id="center" class="col py-5 px-5 bg-dark text-light " >
+                <div id="center" class="col py-4 px-5 bg-dark text-light">
                     <div class="row row-cols-1">
                         <div class="col d-flex justify-content-between mb-3">
                             <div class="d-flex  ">
@@ -164,8 +164,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <div id="artistContainer" class="
-                                    row row-cols-3 row-cols-sm-3 row-cols-md-6">
+                                    <div id="artistContainer" class="row row-cols-2 row-cols-sm-3 row-cols-md-6">
 
                                     </div>
                                 </div>
@@ -175,7 +174,7 @@
                             <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
                         </div>
                         <div class="col">
-                            <div id="albumSection" class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-3  ">
+                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
 
                             </div>
                         </div>
