--- a/album.html
+++ b/album.html
@@ -130,6 +130,8 @@
                 <!-- CENTRO -->
 
                 <div id="center" class="col px-0 text-light mb-0">
+
+                    
                    <!-- <div class="sfondoDinamico">
                         <div class="row row-cols-1 p-3">
                             <div class="col d-flex justify-content-between mb-3">
@@ -320,19 +322,40 @@
                 </div>
 
             </div>
-
-            <!-- PLAYER -->
-            <section>
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                    </div>
-                </div>
-            </section>
-        </div>
     </main>
+
+    <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
+        <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
+            <div class="row text-center p-2 align-items-center justify-content-between">
+                <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
+
+                </div>
+                <div id="sectionPlayer" class="col-6 col-md-8 text-center">
+
+                </div>
+
+                <div id="sectionVolume" class="col-md-2 volumeControll">
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <nav class="navbar-mobile d-sm-block d-md-none">
+        <ul class="nav justify-content-around w-100">
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-home"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-search"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-book"></i></a>
+            </li>
+        </ul>
+    </nav>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
