--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-12 col-md-2 bg-black d-none d-lg-block">
-                    <div class="row flex-column px-4">
+                <div class="col-2 d-none d-lg-block bg-black">
+                    <div class="row flex-column  px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-light text-decoration-none align-self-center"
-                                        href="index.html">Home</a>
+                                    <a class="text-secondary text-decoration-none align-self-center" href="index.html">Home</a>
                                 </li>
-                                <li class="d-flex align-items-center mb-2">
-                                    <i class="bi bi-search text-secondary me-3 fs-4"></i>
-                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Cerca</a>
+                                <li class="d-flex align-items-center mb-2" id="search-container">
+                                    <button id="search-button" class="btn ms-0 px-0">
+                                        <i class="bi bi-search text-secondary me-3 fs-4">
+                                        </i></button>
+                                    <input type="search" id="album-search" class="form-control" placeholder="Cerca">
                                 </li>
                                 <li class="d-flex align-items-center mb-2">
                                     <svg width="25px" height="30px" class="me-3" viewBox="0 0 24 24"
@@ -87,10 +88,10 @@
                                 </li>
                                 <li class="d-flex align-items-center mb-3">
                                     <div
-                                        class="me-3 gradient rounded-1 square d-flex justify-content-center align-items-center">
+                                        class=" gradient rounded-1 square d-flex justify-content-center align-items-center">
                                         <i class="bi bi-suit-heart-fill fs-small text-light px-3"></i>
                                     </div>
-                                    <a class="text-secondary text-decoration-none align-self-center" href="#">Brani che
+                                    <a class="text-secondary text-decoration-none align-self-center ms-3" href="#">Brani che
                                         ti piacciono</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-4">
@@ -107,15 +108,19 @@
                         </div>
 
                         <div class="col">
-                            <ul class="text-secondary list-unstyled">
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
-                                <li class="mb-2 text-truncate">early stage emily syndrome (settt-ott 2022)</li>
+                            <ul id="search-history-list" class="text-secondary list-unstyled">
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
+                                <li class="mb-2"></li>
                             </ul>
                         </div>
                     </div>
