--- a/search.html
+++ b/search.html
@@ -16,11 +16,11 @@
 <body>
 
     <main>
-        <div class="container-fluid g-0">
+        <div class="container-fluid">
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-2 bg-black">
+                <div class="col-2 d-none d-lg-block bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -127,37 +127,66 @@
                 </div>
 
                 <!-- CENTRO -->
+                <div id="center" class="col py-4 px-5 bg-dark text-light">
+                    <div class="row row-cols-1">
+                        <div class="col d-flex justify-content-between mb-3">
+                            <div class="d-flex  ">
+                                <div class="d-none d-lg-flex">
+                                    <div
+                                        class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center me-4">
+                                        <i class="fa-solid fa-chevron-left fs-5"></i>
+                                    </div>
+                                </div>
 
-                <div id="center" class="col p-0 text-light bg-dark">
-
-                    <div class="row row-cols-2 mx-0">
-                        <div id="colHeroImg" class="col-12 d-flex justify-content-between mb-3">
-
-                        </div>
-
-                        <div class="col-12 px-4 mb-5">
-                            <div id="containerArtist" class="row m-0 p-0 border border-0 border-bottom border-1 border-secondary">
-
+                                <div
+                                    class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center d-none d-lg-flex">
+                                    <i class="fa-solid fa-chevron-right fs-5"></i>
+                                </div>
+                            </div>
+                            <div
+                                class="d-flex text-light bg-black rounded-5 justify-content-end align-items-center d-none d-lg-flex">
+                                <div class="square me-3">
+                                    <img src="assets/img/search/image-1.jpeg" class="w-100 rounded-circle" alt="">
+                                </div>
+                                <p class="m-0 me-3">Team 1...</p>
+                                <i id="dropdown" class="fa-solid fa-caret-down fs-5 align-self-self pe-3"></i>
                             </div>
                         </div>
 
-                        <div class="col-12 px-4  mb-10">
-                            <p class="fs-2 fw-bold">Album</p>
-                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3  ">
+                        <div id="annunci" class="col mb-5 rounded-2 d-none d-lg-block">
+
+                        </div>
+
+                        <div class="col">
+                            <div class="row row-cols-1 mb-3">
+                                <div class="col p-0 d-flex justify-content-between align-items-start">
+                                    <h2 class="fs-2 fw-bold goodnight-mobile mb-3">Artisti</h2>
+                                    <div class="icon-container d-flex  d-sm-block d-md-none ">
+                                        <i class="fa-solid fa-bell">&nbsp;</i>
+                                        <i class="fa fa-gear">&nbsp;</i>
+                                        <i class="fa fa-history">&nbsp;</i>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <div id="artistContainer" class="row row-cols-2 row-cols-sm-3 row-cols-md-6">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-0">
+                            <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
+                        </div>
+                        <div class="col">
+                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
 
                             </div>
                         </div>
                     </div>
-
-
-                    <!--parte centrale- canzoni -->
-
-
                 </div>
-                <!-- Album Section -->
-
                 <!-- DESTRA -->
-                <div id="destra" class="col-2 bg-black text-light">
+                <div id="destra" class="col-2 bg-black text-light d-none d-lg-block">
                     <div class="row my-4">
                         <div class="col d-flex justify-content-between align-items-center">
                             <div>
@@ -196,7 +225,7 @@
                             <p class="fs-small">8 ore</p>
                         </div>
                     </div>
-                    <div class="row text-white-50 mb-4">
+                    <div class="row text-white-50">
                         <div class="w-25 col-3">
                             <img src="assets/img/search/image-17.jpg" class="rounded-circle w-100" alt="img-friends">
                         </div>
@@ -212,31 +241,46 @@
                 </div>
             </div>
         </div>
+
+        <!-- PLAYER -->
+        <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
+            <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
+                <div class="row text-center p-2 align-items-center justify-content-between">
+                    <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
+
+                    </div>
+                    <div id="sectionPlayer" class="col-6 col-md-8 text-center">
+
+                    </div>
+
+                    <div id="sectionVolume" class="col-md-2 volumeControll">
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
-    <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
-        <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
-            <div class="row text-center p-2 align-items-center justify-content-between">
-                <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
-
-                </div>
-                <div id="sectionPlayer" class="col-6 col-md-8 text-center">
-
-                </div>
-
-                <div id="sectionVolume" class="col-md-2 volumeControll">
-
-                </div>
-                
-
-            </div>
-        </div>
-    </section>
+    <!-- Navbar mobile -->
+    <nav class="navbar-mobile d-sm-block d-md-none">
+        <ul class="nav justify-content-around w-100">
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-home"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-search"></i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="#"><i class="fa-solid fa-book"></i></a>
+            </li>
+        </ul>
+    </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="./assets/js/artist.js"></script>
+    <script src="assets/js/search.js"></script>
 </body>
 
 </html>
