--- a/album.html
+++ b/album.html
@@ -13,14 +13,14 @@
     <title>Spotify</title>
 </head>
 
-<body>
+<body class="bg-dark">
 
-    <main>
+    <main class="overflow-x-hidden">
         <div class="container-fluid g-0">
             <div class="row">
 
                 <!-- SINISTRA -->
-                <div class="col-2 bg-black">
+                <div class="col-2 d-none d-lg-block bg-black">
                     <div class="row flex-column px-4">
                         <div class="col mb-4">
                             <ul class="list-unstyled">
@@ -267,7 +267,7 @@
                 <!-- Album Section -->
 
                 <!-- DESTRA -->
-                <div id="destra" class="col-2 bg-black text-light">
+                <div id="destra" class="col-2 bg-black text-light d-none d-lg-block">
                     <div class="row my-4">
                         <div class="col d-flex justify-content-between align-items-center">
                             <div>
@@ -342,10 +342,10 @@
         </div>
     </section>
 
-    <nav class="navbar-mobile d-sm-block d-md-none">
+    <nav class="navbar-mobile d-sm-block d-lg-none">
         <ul class="nav justify-content-around w-100">
             <li class="nav-item">
-                <a class="nav-link text-light" href="#"><i class="fa-solid fa-home"></i></a>
+                <a class="nav-link text-light" href="./index.html"><i class="fa-solid fa-home"></i></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" href="#"><i class="fa-solid fa-search"></i></a>
