--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>Spotify</title>
 </head>
 
-<body>
+<body class="bg-dark">
 
-    <main>
+    <main class="overflow-x-hidden">
         <div class="container-fluid">
             <div class="row">
 
@@ -131,15 +131,15 @@
                     <div class="row row-cols-1">
                         <div class="col d-flex justify-content-between mb-3">
                             <div class="d-flex  ">
-                                <div class="d-none d-lg-flex">
+                                <div class=" d-flex">
                                     <div
                                         class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center me-4">
-                                        <i class="fa-solid fa-chevron-left fs-5"></i>
+                                        <a href="./index.html"> <i class="fa-solid fa-chevron-left text-light align-items-center fs-5"></i></a>
                                     </div>
                                 </div>
 
                                 <div
-                                    class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center d-none d-lg-flex">
+                                    class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center d-none ">
                                     <i class="fa-solid fa-chevron-right fs-5"></i>
                                 </div>
                             </div>
@@ -161,7 +161,7 @@
                             <div class="row row-cols-1 mb-3">
                                 <div class="col p-0 d-flex justify-content-between align-items-start">
                                     <h2 class="fs-2 fw-bold goodnight-mobile mb-3">Artisti</h2>
-                                    <div class="icon-container d-flex  d-sm-block d-md-none ">
+                                    <div class="icon-container d-flex  d-lg-none ">
                                         <i class="fa-solid fa-bell">&nbsp;</i>
                                         <i class="fa fa-gear">&nbsp;</i>
                                         <i class="fa fa-history">&nbsp;</i>
@@ -169,7 +169,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <div id="artistContainer" class="row row-cols-2 row-cols-sm-3 row-cols-md-6">
+                                    <div id="artistContainer" class="row row-cols-3 row-cols-sm-3 row-cols-md-6">
 
                                     </div>
                                 </div>
@@ -179,7 +179,7 @@
                             <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
                         </div>
                         <div class="col">
-                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
+                            <div id="albumSection" class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-3 ">
 
                             </div>
                         </div>
@@ -263,10 +263,10 @@
     </main>
 
     <!-- Navbar mobile -->
-    <nav class="navbar-mobile d-sm-block d-md-none">
+    <nav class="navbar-mobile d-sm-block d-lg-none">
         <ul class="nav justify-content-around w-100">
             <li class="nav-item">
-                <a class="nav-link text-light" href="#"><i class="fa-solid fa-home"></i></a>
+                <a class="nav-link text-light" href="./index.html"><i class="fa-solid fa-home"></i></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" href="#"><i class="fa-solid fa-search"></i></a>
