--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <div class=" d-flex">
                                     <div
                                         class="square rounded-circle bg-black text-secondary d-flex justify-content-center align-items-center me-4">
-                                        <a href="./index.html"> <i class="fa-solid fa-chevron-left text-light align-items-center fs-5"></i></a>
+                                        <a href="./index.html"> <i class="fa-solid fa-chevron-left text-light align-items-center fs-5 mt-1"></i></a>
                                     </div>
                                 </div>
 
