--- a/search.html
+++ b/search.html
@@ -27,7 +27,8 @@
                                 <li class="text-light fs-2 mb-3">...</li>
                                 <li class="d-flex align-items-center mb-2">
                                     <i class="bi bi-house-door-fill text-secondary me-3 fs-4"></i>
-                                    <a class="text-secondary text-decoration-none align-self-center" href="index.html">Home</a>
+                                    <a class="text-secondary text-decoration-none align-self-center"
+                                        href="index.html">Home</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-2" id="search-container">
                                     <button id="search-button" class="btn ms-0 px-0">
@@ -91,7 +92,8 @@
                                         class=" gradient rounded-1 square d-flex justify-content-center align-items-center">
                                         <i class="bi bi-suit-heart-fill fs-small text-light px-3"></i>
                                     </div>
-                                    <a class="text-secondary text-decoration-none align-self-center ms-3" href="#">Brani che
+                                    <a class="text-secondary text-decoration-none align-self-center ms-3" href="#">Brani
+                                        che
                                         ti piacciono</a>
                                 </li>
                                 <li class="d-flex align-items-center mb-4">
@@ -153,10 +155,6 @@
                             </div>
                         </div>
 
-                        <div id="annunci" class="col mb-5 rounded-2 d-none d-lg-block">
-
-                        </div>
-
                         <div class="col">
                             <div class="row row-cols-1 mb-3">
                                 <div class="col p-0 d-flex justify-content-between align-items-start">
@@ -175,12 +173,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col p-0">
-                            <p class="fs-5 fw-bold">Altro di ciò che ti piace</p>
-                        </div>
-                        <div class="col">
-                            <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
 
+                        <div class="col">
+                            <div class="row row-cols-1 mb-3">
+                                <div class="col p-0 d-flex justify-content-between align-items-start">
+                                    <h2 class="fs-2 fw-bold goodnight-mobile mb-3">Album</h2>
+                                    <div class="icon-container d-flex  d-sm-block d-md-none ">
+                                        <i class="fa-solid fa-bell">&nbsp;</i>
+                                        <i class="fa fa-gear">&nbsp;</i>
+                                        <i class="fa fa-history">&nbsp;</i>
+                                    </div>
+                                </div>
+                                <div id="albumSection" class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-3 ">
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -244,7 +250,8 @@
 
         <!-- PLAYER -->
         <section id="sectionControl" class="position-fixed player-bar w-100 d-none">
-            <div id="containerPlayer" class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
+            <div id="containerPlayer"
+                class="container-fluid bg-black border border-0 border-top border-1 border-secondary p-0">
                 <div class="row text-center p-2 align-items-center justify-content-between">
                     <div id="sectionAlbum" class="col-6 col-md-2 d-flex text-secondary align-items-center">
 
